--- a/NewsApp/app/src/main/res/values/strings.xml
+++ b/NewsApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">News App</string>
+    <string name="app_name">Today News</string>
+    <string name="search_string">search</string>
 </resources>
